# opentitan.rs

./: .gitignore  BUILD.md  Cargo.toml  Makefile  README.md  flash_crt.S  flash_link.ld  riscv32-unknown-elf-ld.sh  top_earlgrey.svd
.cargo/: config  riscv32-unknown-elf-ld.sh  riscv32imc-unknown-none-elf.json
container/: Dockerfile  run.sh
earlgrey-registers/: Cargo.toml  lib.rs
earlgrey-registers/src/: aes.rs  alert_handler.rs  flash_ctrl.rs  gpio.rs  hmac.rs  interrupt.rs  lib.rs  nmi_gen.rs  pinmux.rs  rv_plic.rs  rv_timer.rs  spi_device.rs  uart.rs
earlgrey-registers/src/aes/: ctrl.rs  data_in.rs  data_out.rs  key.rs  status.rs  trigger.rs
earlgrey-registers/src/alert_handler/: alert_cause.rs  alert_class.rs  alert_en.rs  classa_accum_cnt.rs  classa_accum_thresh.rs  classa_clr.rs  classa_clren.rs  classa_ctrl.rs  classa_esc_cnt.rs  classa_phase0_cyc.rs  classa_phase1_cyc.rs  classa_phase2_cyc.rs  classa_phase3_cyc.rs  classa_state.rs  classa_timeout_cyc.rs  classb_accum_cnt.rs  classb_accum_thresh.rs  classb_clr.rs  classb_clren.rs  classb_ctrl.rs  classb_esc_cnt.rs  classb_phase0_cyc.rs  classb_phase1_cyc.rs  classb_phase2_cyc.rs  classb_phase3_cyc.rs  classb_state.rs  classb_timeout_cyc.rs  classc_accum_cnt.rs  classc_accum_thresh.rs  classc_clr.rs  classc_clren.rs  classc_ctrl.rs  classc_esc_cnt.rs  classc_phase0_cyc.rs  classc_phase1_cyc.rs  classc_phase2_cyc.rs  classc_phase3_cyc.rs  classc_state.rs  classc_timeout_cyc.rs  classd_accum_cnt.rs  (+19 more)
earlgrey-uart/: Cargo.toml  uart.rs
earlgrey-uart/src/: lib.rs  main.rs  uart.rs
src/: lib.rs
(+213 files in other folders)
