[package]
name = "earlgrey-uart"
version = "0.1.0"
authors = ["Nathan Holstein <nathan.holstein@gmail.com>"]
edition = "2018"

[features]
default = [ "verilator" ]
verilator = []

[lib]
crate-type = ["staticlib"]

[dependencies]
cast = { version = "0.2.3", default-features = false }
earlgrey-registers = { path="../earlgrey-registers", version="0.1.0" }
